--- a/Archi.api/appsettings.Development.json
+++ b/Archi.api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Archi": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ArchiDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Archi": "Server=tcp:floki.database.windows.net,1433;Initial Catalog=ArchilogProject;Persist Security Info=False;User ID=Flokitoto;Password=ISRAEL;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
