--- a/Archi.api/appsettings.Development.json
+++ b/Archi.api/appsettings.Development.json
@@ -6,7 +6,7 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
+        "Microsoft": "Information",
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
@@ -14,7 +14,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/logs/log.txt",
+          "path": "logs/log.txt",
           "rollingInterval": "Day"
         }
       }
