--- a/Archi.api/Archi.api.csproj
+++ b/Archi.api/Archi.api.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="DynamicExpressions.NET" Version="1.1.0" />
+    <PackageReference Include="Fop" Version="1.0.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.21">
