--- a/Archi.Library/Archi.Library.csproj
+++ b/Archi.Library/Archi.Library.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
+    <PackageReference Include="Sieve" Version="2.5.4" />
   </ItemGroup>
 
 </Project>
