--- a/Archi.api/appsettings.json
+++ b/Archi.api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Archi": "Server=tcp:floki.database.windows.net,1433;Initial Catalog=ArchilogProject;Persist Security Info=False;User ID=Flokitoto;Password=ISRAEL;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "Archi": "Server=tcp:floki.database.windows.net,1433;Initial Catalog=ArchilogProject;Persist Security Info=False;User ID=Flokitoto;Password=HgnxrEU7i7ykP4r;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
